# wevo

./: README.md  bjdisco.py  commands.py  logparse.py  pyproject.toml  request.py  server.py  test.py
commands/: __init__.py  audio.py  crop.py  meta.py  notifications.py  settings.py  streaming.py
info/: NMaps
info/logs/: COMMAND_LOG_1  COMMAND_LOG_2  COMMAND_LOG_3  COMMAND_LOG_3-parsed.json  command_types  commands.json  commands_rtmp.json  example_full_adb_logcat_rtmpsetup  get_settings_all.json  get_settings_result_all.json  nocrop.json  nocrop1.json  nocrop2.json  nocrop3.json  notification_settings_all.json  parsed1.json  parsed2.json  set_settings_all.json  sets.json  settings-todo
info/testing/: RebootSequence  TEST-RESPONSE-1
integration/motion/: Dockerfile  README
integration/motioneye/: start.sh
integration/motioneye/etc/: motioneye.conf
integration/rtmp/: start.sh
tools/: README.md
