[tool.poetry]
name = "wevo"
version = "0.1.0"
description = ""
authors = ["nate johnson <nate@biobright.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
aiozeroconf = "^0.1.8"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
ipython = "^7.12.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
